--- a/package.json
+++ b/package.json
@@ -5,50 +5,50 @@
   "version": "0.1.0",
   "author": "Dima Vyshniakov <morewings@gmail.com>",
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "classnames": "^2.3.1",
-    "css-vars-hook": "^0.2.5",
-    "file-saver": "^2.0.5",
-    "gatsby": "^2.32.13",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.10.2",
+    "bootstrap": "4.6.0",
+    "classnames": "2.3.1",
+    "css-vars-hook": "0.2.5",
+    "file-saver": "2.0.5",
+    "gatsby": "2.32.13",
+    "gatsby-image": "3.11.0",
+    "gatsby-plugin-gtag": "1.0.13",
+    "gatsby-plugin-manifest": "2.12.1",
+    "gatsby-plugin-offline": "3.10.2",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-plugin-react-helmet": "3.10.0",
+    "gatsby-plugin-react-svg": "3.0.1",
+    "gatsby-plugin-sharp": "2.14.4",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-plugin-webfonts": "^1.1.4",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-sharp": "^2.12.1",
-    "lodash": "^4.17.20",
-    "nanoid": "^3.1.28",
-    "prop-types": "^15.7.2",
-    "ramda": "^0.27.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-modal": "^3.14.3",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "gatsby-plugin-webfonts": "1.1.4",
+    "gatsby-source-filesystem": "2.11.1",
+    "gatsby-transformer-sharp": "2.12.1",
+    "lodash": "4.17.20",
+    "nanoid": "3.1.28",
+    "prop-types": "15.7.2",
+    "ramda": "0.27.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
+    "react-modal": "3.14.3",
+    "react-redux": "7.2.5",
+    "redux": "4.1.1"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "fontello-cli": "^0.6.2",
-    "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-root-import": "^2.0.7",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-config-react-app": "5.2.1",
+    "eslint-plugin-fp": "2.3.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.4.1",
+    "eslint-plugin-react": "7.26.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "fontello-cli": "0.6.2",
+    "gatsby-plugin-postcss": "2.3.13",
+    "gatsby-plugin-root-import": "2.0.7",
+    "husky": "7.0.2",
+    "lint-staged": "11.1.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
@@ -65,12 +65,13 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 0",
+    "test": "exit 0",
     "fix:js": "npx eslint --fix ./src/",
     "lint:js": "npx eslint ./src/",
     "lint:style": "npx stylelint ./src/",
     "fix:style": "npx stylelint ./src/ --fix",
-    "edit:fonts": "npx fontello-cli open --config ./fontello/config.json"
+    "edit:fonts": "npx fontello-cli open --config ./fontello/config.json",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
